Fix nav elements overflowing

--- a/css/master.css
+++ b/css/master.css
@@ -42,6 +42,8 @@ nav a{
   margin: 5px 5px;
   padding: 5px 10px;
 
+  flex-grow: 1;
+
   /* Adds a fade effect when links are hovered on*/
     transition:.5s;
 
@@ -58,6 +60,13 @@ nav a:hover{
   background-color:white;
   color: black;
   text-decoration:none;
+}
+
+@media only screen and (min-width: 768px) {
+  .nav-list {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
 
 main {
